#PROD-3877 Added word break to fix test overflow [PROD-3877] PROD-3877 #comment Added word break to fix test overflow

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -131,7 +131,7 @@
 		.activity-header {
 			margin: 0 auto;
 			width: 80%;
-
+			word-break: break-word;
 			// ensure elements are display inline, some themes setting avatars as block
 			a,
 			img {
