--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3399,6 +3399,10 @@ input.search-query-input {
   display: inline;
 }
 
+.activity-list .activity-item .activity-header p {
+  word-wrap: break-word;
+}
+
 .activity-list .activity-item .activity-header .avatar {
   display: inline-block;
   margin: 0 5px;
